--- a/style.css
+++ b/style.css
@@ -16,16 +16,16 @@ body {
 	top: 0;
 	width: 800px;
 	height: 100%;
-	min-width: 800px;
+	min-width: 790px;
 	z-index: 1;
 	padding: 5em 0 3em 0;
 }
 
 #content {
 	position: absolute;
-	top: 2%;
+	top: 0;
 	height: 100%;
-	width: calc(100% - 800px);
+	width: calc(100% - 790px);
 	left: 800px;
 	z-index: 1;
 	padding: 5em 0 3em 0;
