--- a/style.css
+++ b/style.css
@@ -14,9 +14,8 @@ body {
 #leftContent {
 	position: absolute;
 	top: 0;
-	width: 780px;
+	width: calc(700px + 4em + 1%);
 	height: 100%;
-	min-width: 770px;
 	z-index: 1;
 	padding: 5em 0 3em 0;
 	overflow: auto;
@@ -24,8 +23,8 @@ body {
 
 #organErrorViz{
 	position: relative;
-	width: 95%;
-	left: 2.5%;
+	width: calc(700px + 3em);
+	margin: 1em;
 	background-color: #a5a5a5;
 	border: 1px solid black;
 }
@@ -38,7 +37,7 @@ body {
 	position: absolute;
 	top: 0;
 	height: 100%;
-	width: calc(100% - 780px);
+	width: calc(99% - 700px - 4em);
 	left: 800px;
 	z-index: 1;
 	padding: 5em 0 3em 0;
