--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #leftContent {
 	position: absolute;
 	top: 0;
-	width: calc(700px + 4em + 1%);
+	width: calc(710px + 4em + 1%);
 	height: 100%;
 	z-index: 1;
 	padding: 5em 0 3em 0;
@@ -37,7 +37,7 @@ body {
 	position: absolute;
 	top: 0;
 	height: 100%;
-	width: calc(99% - 700px - 4em);
+	width: calc(99% - 710px - 4em);
 	left: 800px;
 	z-index: 1;
 	padding: 5em 0 3em 0;
@@ -97,10 +97,17 @@ a {
 	z-index: 100;
 }
 
+#bubbleChart{
+	position: block;
+	background-color: 'silver';
+	width: 90%;
+	height: auto;
+}
+
 #lineChartsContainer {
 	display: block;
 	position: fixed;
-	top: 60px;
+	top: 30px;
 	left: -9000px;
 	width: 100%;
 	min-width: 1160px;
@@ -113,7 +120,6 @@ a {
 }
 
 #pTarget_chart {
-	
 	display: inline-block;
 	position: relative;
 	top: 25px;
@@ -137,23 +143,24 @@ a {
 }
 
 #pDifference_chart {
-	
 	display: block;
+	margin:auto;
 	border: 2px solid #1f1f1f;
 	text-align: left;
 	width: auto;
 	height: auto;
 }
 
-#pAverages_chart {
+#bubbleChart {
 	display: block;
 	position: relative;
-	top: 40px;
+	top: 25px;
 	margin: auto;
 	margin-bottom: 10px;
 	border: 0px solid red;
 	text-align: left;
 	width: 1160px;
+	background-color: blue;
 	height: 380px;
 	
 }
@@ -466,7 +473,7 @@ option:hover {
 	}
 }
 
-.tooltip {
+.tooltip, .bubbletooltip {
   color: white;
   position: absolute;
   padding: 3px;
@@ -475,10 +482,11 @@ option:hover {
   background-color: #444;
   border: 1px solid black;
   box-shadow: 0px 0px 12px 2px rgba(0, 0, 0, 0.7);
-  z-index:10;
+  z-index:15;
   opacity: .95;
   pointer-events: visibleFill;
 }
+
 
 #details {
 	position: fixed;
