--- a/style.css
+++ b/style.css
@@ -234,6 +234,10 @@ option:hover {
   box-shadow: 3px 3px 12px 3px rgba(0, 0, 0, 0.25);
 }
 
+.clusterCurves{
+	cursor: pointer; 
+}
+
 #DP_button {
 	position: absolute;
 	left: 180px;
@@ -607,8 +611,13 @@ option:hover {
 	z-index: 1;
 	margin: .3em;
 	padding: 0em;
+	width: 18vw;
+	min-width: 275px;
+	max-width: 400px;
+	height: 23vw;
+	min-height: 300px;
+	max-height: 500px;
 	box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.25);
-	overflow: hidden;
 }
 
 .list-item-RP {
@@ -629,19 +638,19 @@ option:hover {
 
 .scene {
 	cursor: crosshair;
-	width: 350px;
-	height: 350px;
+	width: 100%;
+	height: 80%;
 	overflow: hidden;
 }
 
 .description {
-	color: #ffffff;
+	color: black;
 	background-color: #999999;
 	font-family: sans-serif;
 	font-size: large;
 	padding: 7px;
 	width: 50%;
-	height: 33px;
+	height: 12%;
 	/*margin-top: 0.5em;*/
 	float: left;
 }
@@ -653,7 +662,7 @@ option:hover {
 	font-size: large;
 	padding: 7px;
 	width: 50%;
-	height: 33px;
+	height: 12%;
 	text-align: right;
 	/*margin-top: 0.5em;*/
 	float: right;
@@ -664,10 +673,11 @@ option:hover {
 	color: #343434;
 	background-color: #999999;
 	width: 100%;
-	height: 26px;
+	height: 8%;
 	font-family: sans-serif;
 	font-size: 14px;
 	padding: 7px;
+	overflow: visible;
 }
 
 .totDose {
