--- a/style.css
+++ b/style.css
@@ -12,23 +12,22 @@ body {
 #leftContent {
 	position: absolute;
 	top: 0;
-	width: calc(98% - 700px - 1.2em);
+	width: calc(95% - 660px - 4em);
 	height: 100%;
-	padding: 5em 0 3em 0;
 	overflow: auto;
+	padding: 5em 0 0em 0;
 }
 
 #organErrorViz{
 	position: relative;
-	background-color: #999999;
+	background-color: #888888;
 	display: inline-block;
-	width: calc(98% - 350px - 1em);
-	margin: .3em;
+	width: calc(100% - 330px - 4em);
+	margin: 1em;
 	margin-top: 0 auto;
-	height: 48%;
-	z-index: 1;
+	height: calc(390px - 1.4em);
+	z-index: 2;
 	vertical-align: top;
-	min-height: 397px;
 	box-shadow: 1px 1px 12px 1px rgba(0, 0, 0, 0.25);
 }
 
@@ -51,15 +50,15 @@ body {
 	top: 0;
 	z-index: 0;
 	height: 100%;
-	width: calc(700px + 2% + 1.2em);
-	left: calc(98% - 700px - 1.2em);
-	padding: 5em 0 3em 0;
+	width: calc(1% + 4em + 660px);
+	left: calc(95% - 660px - 4em);
 	overflow-y: scroll;
 	overflow-x: hide;
+	padding: 5em 0 0em 0;
 }
 #topBar{
 	position: absolute;
-	z-index: 2;
+	z-index: 3;
 	padding: 5em 0 3em 0;
 }
 
@@ -72,15 +71,6 @@ a {
 	left: 0px;
 	top: 0;
 	width: 100%;
-	height: 100%;
-}
-
-#c2 {
-	position: absolute;
-	left: 0px;
-	top: -60px;
-	width: 100%;
-	min-width: 1160px;
 	height: 100%;
 }
 
@@ -108,65 +98,17 @@ a {
 	z-index: 100;
 }
 
-#lineChartsContainer {
-	display: block;
-	position: fixed;
-	top: 60px;
-	left: -9000px;
-	width: 100%;
-	min-width: 1160px;
-	height: calc(100vh - 60px);
-	color: #eee;
-	text-align: center;
-	z-index: 9;
-	overflow-y: scroll;
-}
-
-#pTarget_chart {
-	display: inline-block;
-	position: relative;
-	top: 25px;
-	margin: auto;
-	border: 0px solid red;
-	text-align: left;
-	width: auto;
-	height: auto;
-}
-
-#pPrediction_chart {
-	
-	display: inline-block;
-	position: relative;
-	top: 25px;
-	margin: auto;
-	border: 0px solid red;
-	text-align: left;
-	width: auto;
-	height: auto;
-}
-
-#pDifference_chart {
-	display: block;
-	margin:auto;
-	border: 2px solid #1f1f1f;
-	text-align: left;
-	width: auto;
-	height: auto;
-}
-
 #bubbleChart {
 	display: block;
 	position: relative;
 	z-index: 1;
-	background-color: #999999;
-	margin: .3em;
-	margin-bottom: 1em;
-	margin-top: 1em;
+	background-color: #888888;
+	margin: 1em;
 	border: 0px solid red;
 	text-align: left;
-	width: 99%;
-	left: calc(.5% - .3em);
-	height: 50%;
+	width: calc(100% - 2em);
+	height: calc(100% - 1em - 390px);
+	min-height: 300px;
 	box-shadow: 1px 1px 12px 1px rgba(0, 0, 0, 0.25);
 }
 
@@ -221,42 +163,21 @@ option:hover {
   opacity: .4;
   display: inline-block;
   position: relative;
-  margin: .2%;
+  margin: .05vh;
   color: white;
-  width: 32%;
+  width: calc(32.5% - .1vh);
   border: none;
   cursor: pointer;
-  padding: 5px 10px;
+  padding: .2em;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 1em;
+  font-size: 1.2em;
   box-shadow: 3px 3px 12px 3px rgba(0, 0, 0, 0.25);
 }
 
 .clusterCurves{
 	cursor: pointer; 
-}
-
-#DP_button {
-	position: absolute;
-	left: 180px;
-	bottom: 5px;
-	width: auto;
-	height: 31px;
-	
-	display: inline-block;
-	height: 31px;
-	background-color: rgb(50, 50, 50);
-	color: #eee;
-	font-family: sans-serif;
-	font-size: medium;
-	cursor: pointer;
-	margin-top: 0px;
-	padding: 5px 5px;
-	margin-left: 0px;
-	user-select: none;
-	border: 2px solid rgb(30, 30, 30);
 }
 
 #sideMenu_button {
@@ -322,6 +243,25 @@ option:hover {
 	margin: 0 auto;
 }
 
+#rightContent {
+	position: absolute;
+	width: 4%;
+	left: 96%;
+	height:100%;
+	padding-top: 5em;
+}
+
+.colorBar{
+	position: relative;
+	width: 60%;
+	height: 30vh;
+	z-index: 2;
+	margin: 1em;
+	margin-top: 3em;
+	background-color: #888888;
+	box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.7);
+}
+
 .checkboxContainer {
 	padding-top: 3px;
 	padding-bottom: 3px;
@@ -342,66 +282,6 @@ option:hover {
 }
 
 .label {}
-
-#colorScale {
-	position: relative;
-	top: 22px;
-	right: 75px;
-	height: 31px;
-	margin: 2px auto 2px auto;
-	border: 1px solid black;
-	color: #eee;
-	display: inline-block;
-	transition: 0.3s;
-	z-index: 11;
-	
-	cursor: crosshair;
-}
-
-#colorScale2 {
-	position: relative;
-	height: 31px;
-	margin: 2px auto 2px auto;
-	border: 1px solid black;
-	color: #eee;
-	display: inline-block;
-	transition: 0.3s;
-	z-index: 11;
-	
-	cursor: crosshair;
-}
-
-.scaleLabels1 {
-	position: absolute;
-	top: -21px;
-	width: 40px;
-	height: 20px;
-	text-align: left;
-	font-family: sans-serif;
-	font-size: small;
-	color: white;
-	background-color: #444;
-	border-left: 1px solid black;
-	padding-left: 5px;
-	padding-top: 3px;
-	z-index: 11;
-}
-
-.scaleLabels2 {
-	position: absolute;
-	top: -21px;
-	width: 40px;
-	height: 20px;
-	text-align: left;
-	font-family: sans-serif;
-	font-size: small;
-	color: #111111;
-	background-color: #a5a5a5;
-	border-left: 1px solid black;
-	padding-left: 5px;
-	padding-top: 3px;
-	z-index: 11;
-}
 
 #unitLabel {
 	position: absolute;
@@ -437,41 +317,6 @@ option:hover {
 	z-index: 11;
 	cursor: default;
 	user-select: none;
-}
-
-#colorScaleDetails {
-	position: absolute;
-	top: -21px;
-	width: 60px;
-	height: 20px;
-	text-align: left;
-	font-family: sans-serif;
-	font-size: small;
-	color: #00e4ff;
-	background-color: rgba(68, 68, 68, 0.65);
-	border-left: 1px solid black;
-	padding-left: 5px;
-	padding-top: 3px;
-	z-index: 12;
-	display: none;
-}
-
-#colorScaleDetails2 {
-	position: absolute;
-	top: -21px;
-	width: 60px;
-	height: 20px;
-	text-align: left;
-	font-family: sans-serif;
-	font-size: small;
-	/*color: #00e4ff;*/
-	color: #111111;
-	background-color: rgba(165, 165, 165, 0.5);
-	border-left: 1px solid black;
-	padding-left: 5px;
-	padding-top: 3px;
-	z-index: 12;
-	display: none;
 }
 
 @media screen and (max-height: 450px) {
@@ -609,23 +454,10 @@ option:hover {
 	display: inline-block;
 	opacity: 1;
 	z-index: 1;
-	margin: .3em;
-	padding: 0em;
-	width: 18vw;
-	min-width: 275px;
-	max-width: 400px;
-	height: 23vw;
-	min-height: 300px;
-	max-height: 500px;
-	box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.25);
-}
-
-.list-item-RP {
-	position: relative;
-	display: inline-block;
 	margin: 1em;
 	padding: 0em;
-	border: 1px solid rgb(30, 30, 30);
+	width: 320px;
+	height: 390px;
 	box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.25);
 }
 
@@ -639,49 +471,45 @@ option:hover {
 .scene {
 	cursor: crosshair;
 	width: 100%;
-	height: 80%;
+	height: calc(100% - 3.2em);
 	overflow: hidden;
 }
 
 .description {
 	color: black;
-	background-color: #999999;
-	font-family: sans-serif;
-	font-size: large;
-	padding: 7px;
-	width: 50%;
-	height: 12%;
 	/*margin-top: 0.5em;*/
 	float: left;
 }
 
 .pScore {
 	color: #343434;
-	background-color: #999999;
-	font-family: sans-serif;
-	font-size: large;
-	padding: 7px;
-	width: 50%;
-	height: 12%;
 	text-align: right;
 	/*margin-top: 0.5em;*/
 	float: right;
 }
 
-.info {
-	
-	color: #343434;
-	background-color: #999999;
-	width: 100%;
-	height: 8%;
+.pScore, .description {
+	background-color: #888888;
 	font-family: sans-serif;
-	font-size: 14px;
-	padding: 7px;
+	font-size: 1.5em;
+	height: 1.7em;
+	padding: 0.2em;
+	margin: 0 auto;
+	width: 50%;
+}
+
+.info {
+	color: #343434;
+	background-color: #888888;
+	width: 100%;
+	height: 1.5em;
+	font-family: sans-serif;
+	font-size: 1.1em;
+	padding: .2em;
 	overflow: visible;
 }
 
 .totDose {
-	
 	float: left;
 	padding-right: 20px;
 	height: 100%;
@@ -813,7 +641,7 @@ option:hover {
 .dot {
 	cursor: crosshair;
 }
-circle.dot{
+.point{
 	cursor: pointer !important;
 }
 
@@ -822,3 +650,7 @@ circle.dot{
 	text-shadow: 0 1px 0 #a5a5a5, 1px 0 0 #a5a5a5, 0 -1px 0 #a5a5a5, -1px 0 0 #a5a5a5;
 }
 
+::-webkit-scrollbar { 
+	width: 0 !important; 
+	background: transparent;
+}
