--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ option:hover {
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  border-radius: .2em;
   font-size: 1.2em;
   box-shadow: 3px 3px 12px 3px rgba(0, 0, 0, 0.25);
 }
@@ -268,8 +269,6 @@ option:hover {
 
 .checkboxContainer:hover {}
 
-.checkbox_group {}
-
 .GroupChildren:nth-child(odd) {
 	background-color: #3b3b3b;
 }
@@ -278,8 +277,6 @@ option:hover {
 	height: 15px;
 	width: 100%;
 }
-
-.label {}
 
 #unitLabel {
 	position: absolute;
@@ -450,13 +447,12 @@ option:hover {
 .list-item {
 	position: relative;
 	display: inline-block;
-	opacity: 1;
 	z-index: 1;
 	margin: 1em;
 	padding: 0em;
 	width: 320px;
 	height: 390px;
-	box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.25);
+	box-shadow: 1px 1px 12px 1px rgba(0, 0, 0, 0.25);
 }
 
 #differenceScene {
@@ -477,20 +473,22 @@ option:hover {
 	width: 63px;
 	font-size: 1.4em;
 	cursor: pointer;
-	padding: .2em;
-	margin-top: .5em;
+	font-family: sans-serif;
+	color: white;
+	padding: .3em;
+	height: auto;
 	text-align: center;
-	background-color: 'hsl(240, 30%, 70%)';
-	height: 1.7em;
+	background-color: hsl(200, 30%, 50%);
+	opacity: .4;
 	margin: 0 auto;
 	display: inline-block;
-	border: .3px solid #333333;
-	top: .5em;
+	position: relative;
+	border-radius: 5px 5px 0px 0px;
 }
 
 .description {
 	color: black;
-	/*margin-top: 0.5em;*/
+	cursor: pointer;
 	float: left;
 }
 
@@ -502,9 +500,9 @@ option:hover {
 }
 
 .pScore, .description {
-	background-color: #888888;
 	font-family: sans-serif;
 	font-size: 1.4em;
+	background-color: #888888;
 	padding: 0.2em;
 	margin: 0 auto;
 	width: 50%;
