--- a/style.css
+++ b/style.css
@@ -48,13 +48,12 @@ body {
 #content {
 	position: absolute;
 	top: 0;
-	z-index: 0;
 	height: 100%;
 	width: calc(1% + 4em + 660px);
 	left: calc(95% - 660px - 4em);
 	overflow-y: scroll;
-	overflow-x: hide;
-	padding: 4em 0 0em 0;
+	overflow-x: visible;
+	padding-top: 4em;
 }
 #topBar{
 	position: absolute;
@@ -465,18 +464,17 @@ option:hover {
 .scene {
 	cursor: crosshair;
 	width: 100%;
-	height: calc(100% - 2.5em);
+	height: calc(100% - 3.2em);
 	overflow: hidden;
 }
 
 .sceneToggleButton{
-	width: 63px;
-	font-size: 1.4em;
+	height: 1.7em;
+	font-size: 1.3em;
 	cursor: pointer;
 	font-family: sans-serif;
 	color: white;
 	padding: .3em;
-	height: auto;
 	text-align: center;
 	background-color: hsl(200, 30%, 50%);
 	opacity: .4;
@@ -502,10 +500,11 @@ option:hover {
 
 .pScore, .description {
 	font-family: sans-serif;
-	font-size: 1.4em;
+	font-size: 1.3em;
 	background-color: #888888;
 	padding: 0.2em;
 	margin: 0 auto;
+	height: 1.7em;
 	width: 50%;
 }
 
