--- a/style.css
+++ b/style.css
@@ -247,8 +247,9 @@ option:hover {
 
 #rightContent {
 	position: absolute;
-	width: 4%;
-	left: 96%;
+	width: 5%;
+	left: 97%;
+	margin-left: -2%;
 	height:100%;
 	padding-top: 4em;
 }
@@ -464,27 +465,50 @@ option:hover {
 	height: calc(99% - 3em);
 }
 
+.patientSceneTop{
+	width: 100%;
+	height: auto;
+	display: grid;
+	grid-template-columns: 140px 1fr;
+	grid-template-rows: 1fr;
+	z-index:2;
+	overflow: hidden;
+}
+
+.patientSceneTop * {
+	font-family: sans-serif;
+	font-size: 1.4em;
+	width: 100%;
+	padding: .2em;
+	background-color: #888888;
+	padding: 0 auto;
+	display: inline-block;
+	margin: 0 auto;
+	height: inherit;
+}
+
 .sceneToggleButton{
-	height: 1.7em;
-	font-size: 1.3em;
 	cursor: pointer;
 	font-family: sans-serif;
 	color: white;
-	padding: .3em;
 	text-align: center;
+	height:inherit;
 	background-color: hsl(200, 30%, 50%);
 	opacity: .4;
-	margin: 0 auto;
+	margin: .05em;
 	display: inline-block;
-	position: relative;
-	border-radius: 5px 5px 0px 0px;
+	border-radius: 8px 8px 0px 0px;
 	box-shadow: .01em -.01em .05em hsl(200, 10%, 20%);
 }
 
+
 .description {
+	grid-column-start: 1;
+	grid-row-start: 1;
+	white-space: nowrap;
+	overflow: hidden;
 	color: black;
 	cursor: pointer;
-	float: left;
 }
 
 .pScore {
@@ -494,16 +518,6 @@ option:hover {
 	float: right;
 }
 
-.pScore, .description {
-	font-family: sans-serif;
-	font-size: 1.3em;
-	background-color: #888888;
-	padding: 0.2em;
-	margin: 0 auto;
-	height: 1.7em;
-	width: 50%;
-}
-
 .info {
 	color: #343434;
 	background-color: #888888;
@@ -511,28 +525,27 @@ option:hover {
 	font-family: sans-serif;
 	font-size: 1.1em;
 	padding: .2em;
-	overflow: visible;
+	overflow: hidden;
 	height: 1.3em;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
 }
 
 .totDose {
-	float: left;
 	height: 100%;
-	text-align: left;
+	grid-column-start: 1;
 }
 
 .tVolume {
-	float: left;
 	height: 100%;
-	text-align: left;
-	
+	grid-column-start: 2;
+	text-align: center;
 }
 
 .laterality {
-	float: right;
 	height: 100%;
-	text-align: right;
-	
+	grid-column-start: 3;
+	text-align: center;
 }
 
 .hide {
