--- a/style.css
+++ b/style.css
@@ -159,20 +159,26 @@ option:hover {
 	box-shadow: 0px 0px 13px 2px rgba(0, 0, 0, 0.7);
 	text-align: center;
 }
+#scatterButtonContainer{
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	align-items: stretch;
+	width: 100%;
+}
 
 .scatterButton {
   background: hsl(200, 50%, 50%) !important;
   opacity: .4;
   position: relative;
-  margin: .05vh;
+  margin: .2em;
+  margin-top: .05em;
+  margin-bottom: .05em;
   color: white;
-  width: calc(32.5% - .1vh);
   border: none;
   cursor: pointer;
   padding: .2em;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   border-radius: .2em;
   font-size: 1.2em;
   box-shadow: 3px 3px 12px 3px rgba(0, 0, 0, 0.25);
