--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 	--scene-width: 22em;
 	--scene-height: 29em;
 	--scene-margin: .8em;
+	--plot-background-color: #777777;
 }
 
 #leftContent {
@@ -23,7 +24,7 @@ body {
 
 #organErrorViz{
 	position: relative;
-	background-color: #888888;
+	background-color: var(--plot-background-color);
 	display: inline-block;
 	width: calc(100% - var(--scene-width) - 4*var(--scene-margin));
 	margin: var(--scene-margin);
@@ -104,7 +105,7 @@ a {
 	display: block;
 	position: relative;
 	z-index: 1;
-	background-color: #888888;
+	background-color: var(--plot-background-color);
 	margin: var(--scene-margin);
 	border: 0px solid red;
 	text-align: left;
@@ -486,7 +487,7 @@ option:hover {
 	font-size: 1.4em;
 	width: 100%;
 	padding: .2em;
-	background-color: #888888;
+	background-color: var(--plot-background-color);
 	padding: 0 auto;
 	display: inline-block;
 	margin: 0 auto;
@@ -526,7 +527,7 @@ option:hover {
 
 .info {
 	color: #343434;
-	background-color: #888888;
+	background-color: var(--plot-background-color);
 	width: 100%;
 	font-family: sans-serif;
 	font-size: 1.1em;
