messed around with using keras for making feature embeddings

--- a/style.css
+++ b/style.css
@@ -535,6 +535,7 @@ option:hover {
 	overflow: hidden;
 	height: 1.3em;
 	display: grid;
+	white-space: nowrap;
 	grid-template-columns: 1fr 1fr 1fr;
 }
 
