added in feeding tube toxicity

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 	--scene-width: 22em;
 	--scene-height: 29em;
 	--scene-margin: .8em;
-	--plot-background-color: #777777;
+	--plot-background-color: #FFFFFF;
 }
 
 #leftContent {
